# DT5730

./: .gitignore  CMakeLists.txt  README.md  dt5730.rar
CAEN/: CAENDigitizer_2.13.1_20190503.tgz  DT5730PSD.md  RevisionHistoryPSD_730_4.17_136.16.txt
CAEN/CAENDigitizer_2.11.0/: Readme.txt  install  install_64
CAEN/CAENDigitizer_2.11.0/lib/i686/: libCAENDigitizer.so.2.11.0
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_CI_x720/src/: ReadoutTest_DPP_CI_x720.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PHA_x724_x781/src/: ReadoutTest_DPP_PHA_x724_x781.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PHA_x725_x730/src/: ReadoutTest_DPP_PHA_x725_x730.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PHA_x780/src/: ReadoutTest_DPP_PHA_x780.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PSD_x720/src/: ReadoutTest_DPP_PSD_x720.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PSD_x725_x730/src/: ReadoutTest_DPP_PSD_x725_x730.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PSD_x751/src/: ReadoutTest_DPP_PSD_x751.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_DPP_PSD_x790/src/: ReadoutTest_DPP_PSD_x790.c
CAEN/CAENDigitizer_2.11.0/samples/ReadoutTest_Digitizer/src/: ReadoutTest_Digitizer.c
CAENDT5730/: BoardParameters.txt  CMakeLists.txt  GlobalParameters.txt  main.cc
CAENDT5730/Log/20181126150614/: BoardParameters.txt  GlobalParameters.txt
CAENDT5730/Log/20181126185816/: BoardParameters.txt  GlobalParameters.txt
CAENDT5730/Log/20181126190508/: BoardParameters.txt
CAENDT5730/Log/20181126195413/: BoardParameters.txt
CAENDT5730/README/: CAENDigitizerType.h  README.html  README.md
CAENDT5730/analysis/: Makefile  main.cc  process.cc  raw2root
CAENDT5730/analysis/ana/: Analysis.C  Analysis.h
CAENDT5730/include/: DigitizerConfigure.hh  DigitizerGlobals.hh  DigitizerUser.hh
CAENDT5730/src/: DigitizerAdmin.cc  DigitizerConfigure.cc  DigitizerUser.cc
README/: DATA.md  EXAMPLE.md  FIRMWARE.md  INSTALL.md  PRINCIPLE.md  RUNNING.md  SUMMARY.md  book.json
code/: BoardParameters.txt  CMakeLists.txt  main.cc
code/analysis/ana/: process.cc
code/analysis/makeevent/: Makefile  main.cc  sort  sort.cc  sort.hh
code/analysis/raw2root/: main.cc  raw2root
code/analysis/timesort/: Makefile  main.cc  timesort  timesort.cc  timesort.hh
code/analysis/timesortnew/: main.cc  timesort  timesort.cc
code/include/: DigitizerAdmin.hh  DigitizerGlobals.hh  DigitizerPlot.hh  DigitizerUser.hh
code/src/: DigitizerConfigure.cc  DigitizerPlot.cc  DigitizerUser.cc
docs/: DATA.html  EXAMPLE.html  FIRMWARE.html  INSTALL.html  PRINCIPLE.html  RUNNING.html  index.html  search_index.json  sitemap.xml
firmware/: x730_DPP_PSD_4.17_136.16.cfa
include/: Board.hh
note/: .#SUMMARY.md  FIRMWARE.md  INSTALL.md  PRINCIPLE.md
old/: main.cc
src/: Board.cc
